backup/k8s/yaml/traefik/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules:
  - host: traefik.test.xf80.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-dm
          servicePort: 80
  - host: dashboard.test.xf80.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 9090
